change the content of "how_data_calculate_tip" key. yangyuxi

--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "قد تختلف البيانات المعروضة بواسطة الأجهزة عن الأجهزة أو الأدوات الأخرى. قد تختلف بيانات استخدام الطاقة بناءً على وقت التحديث وتاريخ القياس. قد يتم تقريب البيانات الرقمية، مما يتسبب في اختلافات طفيفة بين البيانات الفردية والإجمالية. تعتمد الكهرباء التي يستهلكها الجهاز على البيئة الفعلية والاستخدام، والتي قد تختلف عن بيئة الاختبار القياسية. يتم تقدير الإجماليات الشهرية واليومية والساعة بشكل منفصل وقد لا تتطابق تمامًا. يتم تقدير مبلغ التوفير لكل جهاز بناءً على نتائج الاختبار، وقد يختلف عن التوفير الفعلي.",
+    "how_data_calculate_tip": "حول بيانات استخدام الطاقة \n\n استخدام الطاقة وتوفيرها هو تقديرات وليست قياسات دقيقة. \n\n تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذلك قد تختلف نتائجك الفعلية. \n\n يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة. \n\n قد تختلف قراءات تطبيقنا عن عداد المرافق الخاص بك أو الأجهزة الأخرى.",
     "select_statistic_range_key": "حدد النطاق الإحصائي",
     "overview_key": "نظرة عامة",
     "value_must_between_10_9999_key": "يجب أن تكون القيمة بين 10 و 9999.",
