--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Данните, показани от устройствата, могат да се различават от данните на други устройства или инструменти. Данните за потреблението на енергия могат да се различават в зависимост от времето на актуализация и датата на измерване. Числовите данни могат да бъдат закръглени, което води до малки разлики между индивидуалните и общите данни. Консумацията на електроенергия от уред зависи от действителната среда и употреба, която може да се различава от стандартната тестова среда. Месечните, дневните и часовите суми се изчисляват отделно и може да не се събират точно. Сумата на спестяванията за всяко устройство се изчислява въз основа на резултатите от тестовете и може да се различава от действителните спестявания.",
+    "how_data_calculate_tip": "Относно данните за потреблението на енергия \n\n Показаното потребление на енергия и спестяванията са приблизителни, а не точни измервания. \n\n Нашите оценки се основават на контролирани тестове, така че действителните ви резултати може да варират. \n\n Използването на енергия в реалния свят зависи от вашата специфична среда и навици. \n\n Показанията на нашето приложение може да се различават от измервателния уред за комунални услуги или други устройства.",
     "select_statistic_range_key": "изберете статистическия диапазон",
     "overview_key": "преглед",
     "value_must_between_10_9999_key": "Стойността трябва да бъде между 10 и 9999.",
