--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Τα δεδομένα που εμφανίζονται από τις συσκευές μπορεί να διαφέρουν από άλλες συσκευές ή όργανα. Τα δεδομένα χρήσης ενέργειας μπορεί να διαφέρουν ανάλογα με τον χρόνο ενημέρωσης και την ημερομηνία μέτρησης. Τα αριθμητικά δεδομένα μπορεί να στρογγυλοποιηθούν, προκαλώντας μικρές διαφορές μεταξύ των ατομικών και των συνολικών δεδομένων. Η κατανάλωση ηλεκτρικής ενέργειας από μια συσκευή εξαρτάται από το πραγματικό περιβάλλον και τη χρήση, που μπορεί να διαφέρει από ένα τυπικό περιβάλλον δοκιμής. Τα μηνιαία, ημερήσια και ωριαία σύνολα εκτιμώνται ξεχωριστά και ενδέχεται να μην αθροίζονται ακριβώς. Το ποσό εξοικονόμησης για κάθε συσκευή εκτιμάται με βάση τα αποτελέσματα των δοκιμών και μπορεί να διαφέρει από τις πραγματικές εξοικονομήσεις.",
+    "how_data_calculate_tip": "Σχετικά με τα δεδομένα χρήσης ενέργειας \n\n Η κατανάλωση ενέργειας και η εξοικονόμηση που εμφανίζονται είναι εκτιμήσεις και όχι ακριβείς μετρήσεις. \n\n Οι εκτιμήσεις μας βασίζονται σε ελεγχόμενες δοκιμές, επομένως τα πραγματικά σας αποτελέσματα ενδέχεται να διαφέρουν. \n\n Η χρήση ενέργειας στον πραγματικό κόσμο εξαρτάται από το συγκεκριμένο περιβάλλον και τις συνήθειές σας. \n\n Οι ενδείξεις της εφαρμογής μας ενδέχεται να διαφέρουν από τον βοηθητικό μετρητή σας ή άλλες συσκευές.",
     "select_statistic_range_key": "επιλέξτε στατιστικό εύρος",
     "overview_key": "επισκόπηση",
     "value_must_between_10_9999_key": "Η τιμή πρέπει να είναι μεταξύ 10 και 9999.",
