--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "داده‌های نمایش داده شده توسط دستگاه‌ها ممکن است با دستگاه‌ها یا ابزارهای دیگر متفاوت باشد. داده‌های مصرف انرژی ممکن است بر اساس زمان به‌روزرسانی و تاریخ اندازه‌گیری متفاوت باشد. داده‌های عددی ممکن است گرد شوند که باعث تفاوت‌های جزئی بین داده‌های فردی و کل می‌شود. برق مصرفی توسط یک دستگاه به محیط و استفاده واقعی بستگی دارد که ممکن است با محیط آزمایش استاندارد متفاوت باشد. مجموع ماهانه، روزانه و ساعتی به طور جداگانه تخمین زده می‌شود و ممکن است دقیقاً جمع نشود. مقدار صرفه‌جویی برای هر دستگاه بر اساس نتایج آزمایش تخمین زده می‌شود و ممکن است با صرفه‌جویی واقعی متفاوت باشد.",
+    "how_data_calculate_tip": "درباره داده های مصرف انرژی \n\n مصرف انرژی و صرفه جویی نشان داده شده تخمینی است، نه اندازه گیری دقیق. \n\n تخمین های ما بر اساس آزمایش های کنترل شده است، بنابراین نتایج واقعی شما ممکن است متفاوت باشد. \n\n مصرف انرژی در دنیای واقعی به محیط و عادات خاص شما بستگی دارد. \n\n خوانش برنامه ما ممکن است با ابزار سنج یا دستگاه های دیگر شما متفاوت باشد.",
     "select_statistic_range_key": "انتخاب محدوده آماری",
     "overview_key": "بررسی اجمالی",
     "value_must_between_10_9999_key": "مقدار باید بین 10 و 9999 باشد.",
