--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "הנתונים המוצגים על ידי המכשירים עשויים להשתנות ממכשירים או מכשירים אחרים. נתוני השימוש באנרגיה עשויים להשתנות בהתאם לזמן העדכון ולתאריך המדידה. נתונים מספריים עשויים להיות מעוגלים, מה שיכול לגרום להבדלים קלים בין נתונים בודדים וכוללים. כמות החשמל הנצרכת על ידי מכשיר תלויה בסביבה ובשימוש בפועל, שיכולים להיות שונים מסביבת בדיקה סטנדרטית. הסכומים החודשיים, היומיים והשעתיים מוערכים בנפרד ועשויים שלא להצטבר בדיוק. סכום החיסכון עבור כל מכשיר מוערך על סמך תוצאות הבדיקה ועשוי להיות שונה מהחיסכון בפועל.",
+    "how_data_calculate_tip": "על נתוני שימוש באנרגיה \n\n צריכת האנרגיה והחיסכון המוצגים הם הערכות, לא מדידות מדויקות. \n\n ההערכות שלנו מבוססות על בדיקות מבוקרות, כך שהתוצאות בפועל עשויות להשתנות. \n\n השימוש באנרגיה בעולם האמיתי תלוי בסביבה ובהרגלים הספציפיים שלך. \n\n קריאות האפליקציה שלנו עשויות להיות שונות ממד השירות שלך או ממכשירים אחרים.",
     "select_statistic_range_key": "בחר טווח סטטיסטי",
     "overview_key": "סקירה כללית",
     "value_must_between_10_9999_key": "הערך חייב להיות בין 10 ל-9999.",
