--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "डिवाइस द्वारा प्रदर्शित डेटा अन्य डिवाइस या उपकरणों से भिन्न हो सकता है। ऊर्जा उपयोग डेटा अपडेट समय और मीटरिंग तिथि के आधार पर भिन्न हो सकता है। संख्यात्मक डेटा को गोल किया जा सकता है, जिससे व्यक्तिगत और कुल डेटा के बीच मामूली अंतर हो सकता है। किसी उपकरण द्वारा खपत की जाने वाली बिजली वास्तविक वातावरण और उपयोग पर निर्भर करती है, जो मानक परीक्षण वातावरण से भिन्न हो सकती है। मासिक, दैनिक और प्रति घंटा कुल अलग-अलग अनुमानित होते हैं और सटीक रूप से नहीं जुड़ सकते हैं। प्रत्येक डिवाइस के लिए बचत राशि का अनुमान परीक्षण परिणामों के आधार पर लगाया जाता है और वास्तविक बचत से भिन्न हो सकता है।",
+    "how_data_calculate_tip": "ऊर्जा उपयोग डेटा के बारे में \n\n दर्शाए गए ऊर्जा उपयोग और बचत अनुमान हैं, सटीक माप नहीं। \n\n हमारे अनुमान नियंत्रित परीक्षणों पर आधारित हैं, इसलिए आपके वास्तविक परिणाम भिन्न हो सकते हैं। \n\n वास्तविक विश्व में ऊर्जा का उपयोग आपके विशिष्ट वातावरण और आदतों पर निर्भर करता है। \n\n हमारे ऐप की रीडिंग आपके उपयोगिता मीटर या अन्य उपकरणों से भिन्न हो सकती है।",
     "select_statistic_range_key": "सांख्यिकीय सीमा चुनें",
     "overview_key": "अवलोकन",
     "value_must_between_10_9999_key": "मान 10 और 9999 के बीच होनी चाहिए।",
