--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "デバイスによって表示されるデータは、他のデバイスや機器のデータと異なる場合があります。 エネルギー使用量データは、更新時間と計測日によって異なる場合があります。 数値データは丸められることがあり、個々のデータと合計データの間にわずかな違いが生じる可能性があります。 家電製品が消費する電力は、標準的なテスト環境とは異なる場合がある実際の環境と使用状況に依存します。 月間、日間、および時間ごとの合計は別々に推定され、正確に合計されない場合があります。 各デバイスの節約額はテスト結果に基づいて推定されており、実際の節約額とは異なる場合があります。",
+    "how_data_calculate_tip": "エネルギー使用データについて\n\n表示されるエネルギー使用量と節約量は推定値であり、正確な測定値ではありません。 \n\n当社の推定値は管理されたテストに基づいているため、実際の結果は異なる場合があります。 \n\n実際のエネルギー使用量は、特定の環境と習慣によって異なります。 \n\n当アプリの測定値は、ユーティリティメーターや他のデバイスの測定値と異なる場合があります。",
     "select_statistic_range_key": "統計範囲を選択",
     "overview_key": "概要",
     "value_must_between_10_9999_key": "値は10から9999の間でなければなりません。",
