--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Құрылғылар көрсететін деректер басқа құрылғылар немесе аспаптар деректерінен өзгеше болуы мүмкін. Энергияны пайдалану деректері жаңарту уақыты мен өлшеу күніне байланысты өзгеруі мүмкін. Сандық деректер дөңгелектенуі мүмкін, бұл жеке және жалпы деректер арасында аздаған айырмашылықтарды тудыруы мүмкін. Құрылғы тұтынатын электр энергиясы нақты орта мен пайдалануға байланысты, бұл стандартты сынақ ортасынан өзгеше болуы мүмкін. Ай сайынғы, күнделікті және сағаттық жиынтықтар бөлек бағаланады және дәл қосылмауы мүмкін. Әрбір құрылғы үшін үнемдеу сомасы сынақ нәтижелері негізінде есептеледі және нақты үнемдеуден өзгеше болуы мүмкін.",
+    "how_data_calculate_tip": "Энергияны пайдалану деректері туралы \n\n Көрсетілген энергияны пайдалану және үнемдеу нақты өлшемдер емес, шамаланған. \n\n Біздің бағалауларымыз бақыланатын сынақтарға негізделген, сондықтан сіздің нақты нәтижелеріңіз әртүрлі болуы мүмкін. \n\n Нақты әлемдегі энергияны пайдалану сіздің нақты ортаңызға және әдеттеріңізге байланысты. \n\n Біздің қолданбаның көрсеткіштері коммуналдық есептегіштен немесе басқа құрылғылардан өзгеше болуы мүмкін.",
     "select_statistic_range_key": "статистикалық ауқымды таңдаңыз",
     "overview_key": "шолу",
     "value_must_between_10_9999_key": "Мән 10 мен 9999 арасында болуы керек.",
