--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "장치에 표시되는 데이터는 다른 장치나 도구와 다를 수 있습니다. 에너지 사용 데이터는 업데이트 시간 및 측정 날짜에 따라 다를 수 있습니다. 숫자 데이터는 반올림될 수 있으며, 이는 개별 데이터와 총 데이터 간에 약간의 차이를 초래할 수 있습니다. 기기가 소비하는 전력은 실제 환경 및 사용에 따라 달라지며, 이는 표준 테스트 환경과 다를 수 있습니다. 월별, 일별 및 시간별 합계는 별도로 추정되며 정확히 합산되지 않을 수 있습니다. 각 장치의 절감 금액은 테스트 결과를 기반으로 추정되며 실제 절감액과 다를 수 있습니다.",
+    "how_data_calculate_tip": "에너지 사용 데이터 정보 \n\n 표시된 에너지 사용량 및 절감액은 정확한 측정치가 아닌 추정치입니다. \n\n 우리의 추정치는 통제된 테스트를 기반으로 하므로 실제 결과는 다를 수 있습니다. \n\n 실제 에너지 사용은 특정 환경과 습관에 따라 달라집니다. \n\n 당사 앱의 판독값은 유틸리티 측정기 또는 기타 장치와 다를 수 있습니다.",
     "select_statistic_range_key": "통계 범위 선택",
     "overview_key": "개요",
     "value_must_between_10_9999_key": "값은 10에서 9999 사이여야 합니다.",
