--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Податоците прикажани од уредите може да се разликуваат од податоците од други уреди или инструменти. Податоците за потрошувачката на енергија може да се разликуваат во зависност од времето на ажурирање и датумот на мерење. Нумеричките податоци може да бидат заокружени, што може да предизвика мали разлики помеѓу индивидуалните и вкупните податоци. Потрошувачката на електрична енергија на апаратот зависи од вистинската средина и употребата, што може да се разликува од стандардната средина за тестирање. Месечните, дневните и часовните вкупни износи се проценуваат одделно и може да не се собираат точно. Износот на заштеда за секој уред се проценува врз основа на резултатите од тестот и може да се разликува од вистинската заштеда.",
+    "how_data_calculate_tip": "За податоците за потрошувачката на енергија \n\n Прикажаната потрошувачка на енергија и заштедите се проценки, а не точни мерења. \n\n Нашите проценки се засноваат на контролирани тестови, така што вашите вистински резултати може да се разликуваат. \n\n Употребата на енергија во реалниот свет зависи од вашата специфична околина и навики. \n\n Читањата на нашата апликација може да се разликуваат од вашиот комунален мерач или други уреди.",
     "select_statistic_range_key": "изберете статистички опсег",
     "overview_key": "преглед",
     "value_must_between_10_9999_key": "Вредноста мора да биде помеѓу 10 и 9999.",
