--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Дані, відображені пристроями, можуть відрізнятися від даних інших пристроїв або інструментів. Дані про використання енергії можуть відрізнятися залежно від часу оновлення та дати вимірювання. Числові дані можуть бути округлені, що може спричинити невеликі відмінності між індивідуальними та загальними даними. Споживання електроенергії приладом залежить від фактичного середовища та використання, які можуть відрізнятися від стандартного тестового середовища. Місячні, денні та погодинні підсумки оцінюються окремо і можуть не складатися точно. Сума заощаджень для кожного пристрою оцінюється на основі результатів тестів і може відрізнятися від фактичних заощаджень.",
+    "how_data_calculate_tip": "Про дані про використання енергії \n\n Показане споживання та економія енергії є приблизними, а не точними вимірюваннями. \n\n Наші оцінки базуються на контрольованих тестах, тому ваші фактичні результати можуть відрізнятися. \n\n Реальне використання енергії залежить від вашого середовища та звичок. \n\n Показання нашого додатка можуть відрізнятися від показників вашого лічильника комунальних послуг або інших пристроїв.",
     "select_statistic_range_key": "виберіть статистичний діапазон",
     "overview_key": "огляд",
     "value_must_between_10_9999_key": "Значення повинно бути між 10 і 9999.",
