--- a/language/i18n_zh_CN.json
+++ b/language/i18n_zh_CN.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "设备显示的数据可能与其他设备或仪器有所不同。能源使用数据可能因更新时间和计量日期而有所不同。数值数据可能会四舍五入，导致个别数据与总数据之间存在细微差异。设备消耗的电量取决于实际环境和使用情况，可能与标准测试环境有所不同。每月、每日和每小时的总量是分别估算的，可能不会完全相加。每个设备的节省金额是基于测试结果估算的，可能与实际节省金额有所不同。",
+    "how_data_calculate_tip": "关于能源使用数据\n\n所示的能源使用量和节省量是估计值，而不是精确测量值。 \n\n我们的估计是基于控制测试的，因此您的实际结果可能会有所不同。 \n\n现实世界的能源使用取决于您的具体环境和习惯。 \n\n我们的应用程序的读数可能与您的公用事业电表或其他设备的读数不同。",
     "select_statistic_range_key": "选择统计范围",
     "overview_key": "概览",
     "value_must_between_10_9999_key": "值必须在10到9999之间。",
