--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "僅當設備開機時可用。",
     "asko_oven_on_during_on": "使用期間開啟",
     "restart": "重新開始",
-    "how_data_calculate_tip": "設備顯示的數據可能與其他設備或儀器有所不同。能源使用數據可能因更新時間和計量日期而有所不同。數值數據可能會四捨五入，導致個別數據與總數據之間存在細微差異。設備消耗的電量取決於實際環境和使用情況，可能與標準測試環境有所不同。每月、每日和每小時的總量是分別估算的，可能不會完全相加。每個設備的節省金額是基於測試結果估算的，可能與實際節省金額有所不同。",
+    "how_data_calculate_tip": "關於能源使用數據\n\n顯示的能源使用量和節省量均為估計值，並非精確測量值。 \n\n我們的估計是基於受控測試，因此您的實際結果可能會有所不同。 \n\n現實世界的能源使用取決於您的特定環境和習慣。 \n\n我們的應用程式的讀數可能與您的電錶或其他設備不同。",
     "select_statistic_range_key": "選擇統計範圍",
     "overview_key": "概览",
     "value_must_between_10_9999_key": "值必須在10到9999之間。",
